@@ -15,41 +15,41 @@ not run its Makefile.PL or Build.PL.
 Hash: RIPEMD160
 
 SHA1 2c4e3d144fc5f69c7dd5d710bed6bf48f1d8a9c4 .perlcriticrc
-SHA1 addb87d0410e319cfde1808f3e13956b1b8c6b97 Changes
+SHA1 e6a77e61f67c7d3ae90ff168d7d9c681414c9aef Changes
 SHA1 5b9db214d56802150c86eb9dc7d44edd46738220 MANIFEST
 SHA1 91759e7e50e1908ae8a4579675671480dcc1d789 MANIFEST.SKIP
-SHA1 c96ee340daf50be32719f24ccfdaa486bea703d7 META.yml
-SHA1 2334400a1b429c66d968d0293eb030a4e1b5d724 Makefile.PL
+SHA1 6d34bbd4178155bf9e8a3e51d31447c3c03dbee5 META.yml
+SHA1 4a237b0bf2b74769ddbd108ac4f7dce929f750da Makefile.PL
 SHA1 f2991c4669223cae5cb13ecb4b5fff2d20a064d0 Pg.h
-SHA1 9fc5cdc5a836ce9da0ae44eca9dde83de53cbd81 Pg.pm
+SHA1 b1daff738da6a8fe696ec8756f3ce89e17a2e334 Pg.pm
 SHA1 07f9840ff41ad1368060a7a3f1ccfb487cb8b55f Pg.xs
-SHA1 5b35583cd40437f2466ed80d32df623ae1ba2253 README
-SHA1 261d85906f33505b32c431e87b98e1cd9293807c README.dev
+SHA1 7642c1d7fd3e2e04f1b7ef05475cff86fb264d62 README
+SHA1 43b85543cddd09021264864b60528e8aca3aeebc README.dev
 SHA1 968d5fad61bce160b31a9cb1a21dd240b9df930f README.win32
 SHA1 cdeb69c8488d0a87430f2c24a07358213c6de02b TODO
-SHA1 3016a84170d36eb13e7bf6ea144a46672d197384 dbdimp.c
+SHA1 c626825ca88b498f53a7f702503ff69b1a0579b8 dbdimp.c
 SHA1 656eaaa05a5f50f7282d838f44b09cb585a11e60 dbdimp.h
 SHA1 aeb8bcf6c0b2314230ecd4dc3e3e275d972ae195 quote.c
 SHA1 86aa3685c343d4f1a014ccd1ca5cd7d87de48e9b quote.h
 SHA1 b0bb74d7bff1d376f9bfff7e3d7505696b284fe0 t/00-signature.t
 SHA1 3bc6be6dc22d6ed0f1b51108b7786e70bfa99131 t/00basic.t
-SHA1 2319351229d79e396c81f34a9f07f625ef7d2bbf t/01connect.t
+SHA1 ea02effa11d914c101e5bd546407b6d3ce72bf18 t/01connect.t
 SHA1 878c7eb0941f7b19f4a9a61d0d2d9a3321905a96 t/01constants.t
-SHA1 f6e01e03d989f0233e0190090412c806ba867f49 t/02attribs.t
-SHA1 4b665ed53818ad25e21fdb85c51367298509bad2 t/03dbmethod.t
+SHA1 066cbab43381421009f4dcd4d521663df1eebb67 t/02attribs.t
+SHA1 c9e3d05761caaf620ad7ecec6d4534e059609252 t/03dbmethod.t
 SHA1 cd993fb4285df4113967dedf5f1b2b5fc2d7ed12 t/03smethod.t
 SHA1 ea369ae9b1abb8ba607fa7a2b3c7d9cb7d41449a t/04misc.t
 SHA1 477ee3896ecd763324da5514380cb91f66ad86d5 t/06bytea.t
-SHA1 8fcec6047e63998c09c77e25aacc55ece10970d6 t/07copy.t
+SHA1 14867de37becfd9a1ccf5bc1a2d0683f62878d71 t/07copy.t
 SHA1 a4a21838c94d8799152c0b53ea244fd0d3f99b5b t/08async.t
 SHA1 68200d8282023da6f6a898ca272deb85d11391b4 t/09arrays.t
 SHA1 377a603cbbb9aa6c3c816e4292396a31a87e3080 t/12placeholders.t
 SHA1 94541bc74e399793f9045dabf02c05bd186267f7 t/20savepoints.t
-SHA1 c0666c324826fb1377f7b21c81e23e4e5273fafd t/99_perlcritic.t
+SHA1 cdd9acbb47069980bf45daa8ae962dedc9a1a3af t/99_perlcritic.t
 SHA1 87a15c775cdf958f35ecd8df37b8ba1e7891acc0 t/99_pod.t
 SHA1 e9e984b3c3366d5cee873f1dc59e2b7c26e744ee t/99_yaml.t
 SHA1 0cbb33eb5cd1971b0bf9a4df834f41f1d9ec9df3 t/99cleanup.t
-SHA1 2c07b489013acce354164930c16398270b4837bf t/dbdpg_test_setup.pl
+SHA1 c82c9c02415eb935f3245c483c431da436433a02 t/dbdpg_test_setup.pl
 SHA1 bc4a58bdd5e853139f9e1fc6129f83e50a07a2c6 t/lib/App/Info.pm
 SHA1 58befda00c12b1721875262505112203bf230450 t/lib/App/Info/Handler.pm
 SHA1 b5bf85b12a5fc207c44113a9c028fb7fbd68531f t/lib/App/Info/Handler/Prompt.pm
@@ -62,7 +62,7 @@ SHA1 ddcc1df34b926ee179bcb57bcf74f893e18bbc63 types.h
 SHA1 f07cd5ecaeb854c81ceb9206364979cf607e6546 win32.mak
 -----BEGIN PGP SIGNATURE-----
 
-iD8DBQFHjuMCvJuQZxSWSsgRA6d4AKCjBYk72vEn6KT0rkAPBjEgmZL7CQCgxQfM
-fYUF6uFpVAyV/JsH0fgPfGs=
-=QDVG
+iD8DBQFHj9oGvJuQZxSWSsgRAzmEAJ9HPiANJtAD2HRxemc+PX7M3C8tnACfSvGr
+V/NaZitHvyPxSpnE+P+Iozg=
+=kYBy
 -----END PGP SIGNATURE-----
