@@ -3,6 +3,7 @@
 
 use strict;
 use warnings;
+use Data::Dumper;
 use DBI;
 select(($|=1,select(STDERR),$|=1)[1]);
 
@@ -37,7 +38,10 @@ sub connect_database {
 
 	## Connect to the database (unless 'dbh' is passed in)
 	## Setup all the tables (unless 'nosetup' is passed in)
-	## Returns the database handle (unless 'disconnect' is passed in)
+	## Returns three values:
+	## 1. helpconnect for use by 01connect.t
+	## 2. Any error generated
+	## 3. The database handle, or undef
 	## The returned handle has AutoCommit=0 (unless AutoCommit is passed in)
 
 	my $arg = shift || {};
@@ -45,14 +49,35 @@ sub connect_database {
 
 	my $dbh = $arg->{dbh} || '';
 
+	my $helpconnect = 0;
+	if (!defined $ENV{DBI_DSN}) {
+		$helpconnect = 1;
+		$ENV{DBI_DSN} = 'dbi:Pg:';
+	}
+
 	if (!$dbh) {
 		eval {
 			$dbh = DBI->connect($ENV{DBI_DSN}, $ENV{DBI_USER}, $ENV{DBI_PASS},
 								{RaiseError => 1, PrintError => 0, AutoCommit => 1});
 		};
-		$@ and return undef;
+		if ($@) {
+			return $helpconnect, $@, undef if $@ !~ /FATAL/ or defined $ENV{DBI_USER};
+			## Try one more time as postgres user (and possibly database)
+			if ($helpconnect) {
+				$ENV{DBI_DSN} .= 'dbname=postgres';
+				$helpconnect += 2;
+			}
+			$helpconnect += 4;
+			$ENV{DBI_USER} = 'postgres';
+			eval {
+				$dbh = DBI->connect($ENV{DBI_DSN}, $ENV{DBI_USER}, $ENV{DBI_PASS},
+									{RaiseError => 1, PrintError => 0, AutoCommit => 1});
+			};
+			return $helpconnect, $@, undef if $@;
+		}
 	}
 	if ($arg->{nosetup}) {
+		return $helpconnect, undef, $dbh unless schema_exists($dbh, $S);
 		$dbh->do("SET search_path TO $S");
 	}
 	else {
@@ -74,26 +99,26 @@ CREATE TABLE dbd_pg_test (
   testarray  text[][],
   testarray2 int[],
   "CaseTest" boolean,
-  bytetest   bytea 
+  bytetest   bytea
 )
 };
 
-$dbh->{Warn} = 0;
-$dbh->do($SQL);
-$dbh->{Warn} = 1;
-$dbh->do(q{COMMENT ON COLUMN dbd_pg_test.id IS 'Bob is your uncle'});
+		$dbh->{Warn} = 0;
+		$dbh->do($SQL);
+		$dbh->{Warn} = 1;
+		$dbh->do(q{COMMENT ON COLUMN dbd_pg_test.id IS 'Bob is your uncle'});
 
 } ## end setup
 
 $dbh->commit() unless $dbh->{AutoCommit};
 
 if ($arg->{disconnect}) {
-$dbh->disconnect();
-return;
+	$dbh->disconnect();
+	return $helpconnect, undef, undef;
 }
 
 $dbh->{AutoCommit} = 0 unless $arg->{AutoCommit};
-return $dbh;
+return $helpconnect, undef, $dbh;
 
 } ## end of connect_database
 
@@ -128,8 +153,7 @@ sub cleanup_database {
 	my $dbh = shift;
 	my $type = shift || 0;
 
-	## For now, don't drop between individual tests
-	return if $type eq 'test';
+	## For now, we always run and disregard the type
 
 	$dbh->rollback() if ! $dbh->{AutoCommit};
 
@@ -147,7 +171,7 @@ sub cleanup_database {
 
 	for my $schema (@schemas) {
 		next if ! schema_exists($dbh,$schema);
-		$dbh->do("DROP SCHEMA $schema");
+		$dbh->do("DROP SCHEMA $schema CASCADE");
 	}
 	$dbh->commit() if ! $dbh->{AutoCommit};
 
